	get string properties.
	(entry_compare): new function generic, taking strstr-like function
	as a parameter.
	(func_contains): rewrite function to use entry_compare.
	(is_helper): new helper function to map strcmp to a strstr-like
	function.
	(func_is): new function, implementing "is" for searches.
	(endswith_helper): new function.
	(func_endswith) new function, implementing "endswith" for searches.
	(beginswith_helper): new function.
	(func_beginswith): new function, implementing "beginswith" for searches.

2000-04-11  Christopher James Lahey  <clahey@helixcode.com>

	* addressbook/gui/minicard/e-minicard-view.c: This was setting
	E_REFLOW(view)->items to NULL too soon.  Fixed now.

2000-04-11  Chris Toshok  <toshok@helixcode.com>

	* addressbook/backend/pas/pas-backend-file.c
	(pas_backend_file_search): remove spew.
	(pas_backend_file_process_create_card): move the sync to the
	earliest possible point after the db operation.
	(pas_backend_file_process_remove_card): same.
	(pas_backend_file_process_modify_card): same, and call
	pas_book_respond_modify, not pas_book_respond_remove, here.

	* addressbook/gui/component/addressbook.c (card_deleted_cb): new
	function.
	(delete_contact_cb): wire up button to call
	e_minicard_view_remove_selection.

	* addressbook/gui/minicard/e-minicard-view.c
	(e_minicard_view_remove_selection): fix warning, and stick "view"
	in the name.

2000-04-10  Christopher James Lahey  <clahey@helixcode.com>

	* addressbook/backend/ebook/e-book-view.c,
	addressbook/backend/ebook/e-book.c: Changed some incorrect
	gtk_object_refs and gtk_object_unrefs into bonobo_object_refs and
	bonobo_object_unrefs.

	* addressbook/backend/pas/pas-card-cursor.c: Changed a
	gtk_object_destroy to a gtk_object_unref.

	* addressbook/gui/minicard/e-minicard-view.c,
	addressbook/gui/minicard/e-minicard-view.h: Set a list pointer to
	NULL after freeing its contents.  Added
	e_minicard_view_remove_selection function.
